[package]
name = "o2_hyper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14.27", features = ["http1", "http2", "server", "client", "tcp"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.5"
bytes = "1"
native-tls = { version = "0.2", features = ["alpn"]}
tokio-native-tls = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
