[package]
name = "o5_reqwest_set_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.25.0", default-features = false, features = ["full"] }
reqwest = { version = "0.11.21", default-features = false, features = ["rustls-tls", "gzip", "deflate", "brotli", "cookies"] }
