[package]
name = "web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
simple_web_framework = { path = "../simple_web_framework" }
simple_web_macros = { path = "../simple_web_macros" }
ctor = "0.1"
